maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:29: error: not enough arguments for method noteIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
  if (!aMurNord(x,y) && y>0) noteIndication(x,y-1);
                                           ^ShortestPathMaze:30: error: not enough arguments for method noteIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
  if (!aMurOuest(x,y) && x>0) noteIndication(x-1,y);
                                            ^ShortestPathMaze:31: error: not found: value m
  if (!aMurNord(x,y+1) && y>m) noteIndication(x,y+1);
                            ^ShortestPathMaze:31: error: not enough arguments for method noteIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
  if (!aMurNord(x,y+1) && y>m) noteIndication(x,y+1);
                                             ^ShortestPathMaze:32: error: not found: value n
  if (!aMurOuest(x+1,y) && x<n) noteIndication(x+1,y);
                             ^ShortestPathMaze:32: error: not enough arguments for method noteIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
  if (!aMurOuest(x+1,y) && x<n) noteIndication(x+1,y);
                                              ^